--- a/index.html
+++ b/index.html
@@ -18,5 +18,5 @@
 <body>
   <app-root></app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
-<script src="polyfills-SCHOHYNV.js" type="module"></script><script src="main-INS4AEVW.js" type="module"></script></body>
+<script src="polyfills-SCHOHYNV.js" type="module"></script><script src="main-4VJ3PQES.js" type="module"></script></body>
 </html>
